--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|8.0.*",
         "ext-json": "*",
         "league/booboo": "^1.1",
         "league/container": "^1.3",
@@ -29,7 +29,7 @@
         "stack/builder": "^1.0",
         "symfony/console": "^3.4",
         "symfony/http-kernel": "^3.2",
-        "willdurand/hateoas": "^2.3",
+        "willdurand/hateoas": "^3.8",
         "willdurand/negotiation": "^1.5"
     },
     "require-dev": {
