--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "league/booboo": "^1.1",
         "league/container": "^1.3",
         "league/event": "^2.2",
-        "league/route": "^1.2",
+        "league/route": "^1.2.4",
         "monolog/monolog": "^1.12",
         "stack/builder": "^1.0",
         "symfony/console": "^3.4",
@@ -68,5 +68,11 @@
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "repositories": [
+        {
+            "type": "github",
+            "url": "git@github.com:RewardGateway/route.git"
+        }
+    ]
 }
