--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
         }
     ],
     "require": {
-        "php": "^7.4|8.0.*",
+        "php": "^7.4|^8.0",
         "ext-json": "*",
         "league/booboo": "^1.1",
         "league/container": "^1.3",
         "league/event": "^2.2",
-        "league/route": "^1.2.4",
+        "league/route": "^1.2.5",
         "monolog/monolog": "^1.12",
         "stack/builder": "^1.0",
         "symfony/console": "^3.4",
