--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -22,3 +22,41 @@ jobs:
       run: vendor/bin/phpcs --report-full --standard=PSR12 src
     - name: Run phpstan check
       run: vendor/bin/phpstan analyse src tests --level 1
+
+  test-php80:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          tools: composer, phpunit
+      - name: Install dependencies
+        run: composer install
+      - name: Run unit tests
+        run: vendor/bin/phpunit
+      - name: Run PHPCS check
+        run: vendor/bin/phpcs --report-full --standard=PSR12 src
+      - name: Run phpstan check
+        run: vendor/bin/phpstan analyse src tests --level 1
+
+  test-php81:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          tools: composer, phpunit
+      - name: Install dependencies
+        run: composer install
+      - name: Run unit tests
+        run: vendor/bin/phpunit
+      - name: Run PHPCS check
+        run: vendor/bin/phpcs --report-full --standard=PSR12 src
+      - name: Run phpstan check
+        run: vendor/bin/phpstan analyse src tests --level 1
