--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  test-php74:
 
     runs-on: ubuntu-latest
     
@@ -14,6 +14,8 @@ jobs:
       with:
         php-version: '7.4'
         tools: composer, phpunit
+      env:
+        COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Install dependencies
       run: composer install
     - name: Run unit tests
@@ -33,6 +35,8 @@ jobs:
         with:
           php-version: '8.0'
           tools: composer, phpunit
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install dependencies
         run: composer install
       - name: Run unit tests
@@ -52,6 +56,8 @@ jobs:
         with:
           php-version: '8.1'
           tools: composer, phpunit
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install dependencies
         run: composer install
       - name: Run unit tests
