--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "require-dev": {
         "mockery/mockery": "^1.4",
         "phpunit/phpunit": "^9.0",
-        "phpstan/phpstan": "0.12.33",
+        "phpstan/phpstan": "^1.5",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "bin": ["bin/phprest"],
