--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,9 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
-        "phpunit/phpunit": "^9.0",
         "phpstan/phpstan": "^1.5",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "bin": ["bin/phprest"],
