--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Run PHPCS check
       run: vendor/bin/phpcs --report-full --standard=PSR12 src
     - name: Run phpstan check
-      run: vendor/bin/phpstan analyse src tests --level 1
+      run: vendor/bin/phpstan analyse
 
   test-php80:
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
       - name: Run PHPCS check
         run: vendor/bin/phpcs --report-full --standard=PSR12 src
       - name: Run phpstan check
-        run: vendor/bin/phpstan analyse src tests --level 1
+        run: vendor/bin/phpstan analyse
 
   test-php81:
     runs-on: ubuntu-latest
@@ -65,4 +65,4 @@ jobs:
       - name: Run PHPCS check
         run: vendor/bin/phpcs --report-full --standard=PSR12 src
       - name: Run phpstan check
-        run: vendor/bin/phpstan analyse src tests --level 1
+        run: vendor/bin/phpstan analyse
