--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "league/route": "^1.2.5",
         "monolog/monolog": "^1.12",
         "stack/builder": "^1.0",
-        "symfony/console": "^3.4",
+        "symfony/console": "^3.4 || ^4.4",
         "symfony/http-kernel": "^4.4",
         "willdurand/hateoas": "^3.8",
         "willdurand/negotiation": "^1.5"
