--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*",
         "league/booboo": "^1.1",
         "league/container": "^1.3",
         "league/event": "^2.2",
         "league/route": "^1.2.5",
-        "monolog/monolog": "^1.12",
+        "monolog/monolog": "^2.0",
         "stack/builder": "^1.0",
-        "symfony/console": "^3.4 || ^4.4",
+        "symfony/console": "^4.4",
         "symfony/http-kernel": "^4.4",
         "willdurand/hateoas": "^3.8",
         "willdurand/negotiation": "^1.5"
