--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,5 +3,6 @@ parameters:
     paths:
         - src
         - tests
+    treatPhpDocTypesAsCertain: false
 includes:
     - vendor/phpstan/phpstan-mockery/extension.neon
