--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -44,3 +44,24 @@ jobs:
         run: vendor/bin/phpcs --report-full --standard=PSR12 src
       - name: Run phpstan check
         run: vendor/bin/phpstan analyse
+
+  test-php83:
+      runs-on: ubuntu-latest
+
+      steps:
+          - name: Checkout
+            uses: actions/checkout@v2
+          - uses: shivammathur/setup-php@v2
+            with:
+                php-version: '8.3'
+                tools: composer, phpunit
+            env:
+                COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          - name: Install dependencies
+            run: composer install
+          - name: Run unit tests
+            run: vendor/bin/phpunit
+          - name: Run PHPCS check
+            run: vendor/bin/phpcs --report-full --standard=PSR12 src
+          - name: Run phpstan check
+            run: vendor/bin/phpstan analyse
